--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="TM5AfWEni1W08IRD5CzZOp8A5NHKkrh7jiIE-HLxdRI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="안전하고 즐거운 온라인 바카라 경험을 위한 필수 가이드. 바카라사이트추천과 선택 방법을 알아보세요.">
     <title>바카라사이트추천: 안전하고 즐거운 온라인 바카라 경험</title>
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="">
-    <link rel="alternate" hreflang="en" href="">
+    <link rel="canonical" href="https://gamesloved.pages.dev/">
+    <link rel="alternate" hreflang="en" href="https://gamesloved.pages.dev/">
     <link rel="icon" href="logo.png" type="image/x-icon">
     
     <script type="application/ld+json">
@@ -16,7 +17,7 @@
             "@type": "WebPage",
             "name": "바카라사이트추천: 안전하고 즐거운 온라인 바카라 경험",
             "description": "안전하고 즐거운 온라인 바카라 경험을 위한 필수 가이드. 바카라사이트추천과 선택 방법을 알아보세요.",
-            "url": ""
+            "url": "https://gamesloved.pages.dev/"
         }
         </script>
     <style>
